# Finance-stuff-

./: README.md  index.html  paper-simplifier.html  pyproject.toml
paper_simplifier/: __init__.py  cli.py  prompts.py  sources.py
